Associate contact to student

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/show.html.twig
@@ -24,6 +24,9 @@
 
     Tecnotek.UI.urls["getContactsURL"] = "{{ path("_expediente_get_contacts_list") }}";
     Tecnotek.UI.urls["associateStudentsURL"] = "{{ path("_expediente_associate_student") }}";
+
+    Tecnotek.UI.urls["associateContactURL"] = "{{ path("_expediente_associate_new_contact") }}";
+
 </script>
 {% endblock %}
 
