--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/course_entries.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/course_entries.html.twig
@@ -146,6 +146,7 @@
                                         </div>
 
                                         <div style="margin-bottom: 5px;">
+                                        <label style="display: inline-block; width: 100px">{% trans %}label.maxEntry{% endtrans %}</label>
                                         <input id="subentryFormMaxValue" name="subentryFormMaxValue" style="width: 270px">
                                         </div>
 
