--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
@@ -29,24 +29,29 @@
 
         <div id="report" style="margin-top: 25px; border: solid thin #000;">
 
+            <div class="center"><h3><img width="840" height="145" src="{{ asset('images/encabezados1.png') }}" alt="" class="image-hover"></h3></div>
+
             <div class="center"><h3>{% trans %}label.ticket4{% endtrans %}</h3></div>
 
-            <div class="center" style="float: left; width: 920px; font-size: 10px;">{% trans %}label.ticket1 {% endtrans %} {{ ticket.student }}</div>
+            <div class="center" style="float: left; width: 920px; font-size: 16px;">{% trans %}label.ticket3 {% endtrans %} {{ ticket.date|date("d-m-Y H:i:s") }}</div>
             </br></br>
 
-            <div class="center" style="float: left; width: 920px; font-size: 10px;">{% trans %}label.ticket2 {% endtrans %} {{ ticket.relative.contact }}</div>
+            <div class="center" style="float: left; width: 920px; font-size: 16px;">{% trans %}label.ticket1 {% endtrans %} {{ ticket.student }}</div>
             </br></br>
 
-            <div class="center" style="float: left; width: 920px; font-size: 10px;">{% trans %}label.ticket3 {% endtrans %} {{ ticket.date|date("d/M/y H:i:s") }}</div>
+            <div class="center" style="float: left; width: 920px; font-size: 16px;">{% trans %}label.ticket2 {% endtrans %} {{ ticket.relative.contact }}</div>
+            </br></br>
 
             </br></br></br></br></br></br></br></br>
 
-            <div class="center" style="float: left; width: 320px; font-size: 10px;">{% trans %}label.ticket5a {% endtrans %}</div>
-            <div class="center" style="float: left; width: 320px; font-size: 10px;">{% trans %}label.ticket5a {% endtrans %}</div>
+            <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
+            <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
             </br></br>
-            <div class="center" style="float: left; width: 320px; font-size: 10px;">{% trans %}label.ticket5 {% endtrans %}</div>
-            <div class="center" style="float: left; width: 320px; font-size: 10px;">{% trans %}label.ticket6 {% endtrans %}</div>
-            </br>
+            <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5 {% endtrans %}</div>
+            <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket6 {% endtrans %}</div>
+            </br></br></br></br></br></br></br></br></br></br>
+            <div class="center" style="float: left; width: 920px; font-size: 14px;">{% trans %}label.ticketnota {% endtrans %}</div>
+            </br></br>
         </div>        
         <div class="clear"></div>
     </div>
