--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/show.html.twig
@@ -69,8 +69,8 @@
                         </div>
 
                         <div>
-                            <label>{%trans%}label.age{%endtrans%}</label>
-                            <span id="labelAge">{{ entity.age }}</span>
+                            <label>{%trans%}label.section{%endtrans%}</label>
+                            <span id="labelgroupyear">{{ entity.groupyear }}</span>
                         </div>
 
                         <div>
