--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/list.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/list.html.twig
@@ -34,7 +34,7 @@
                     {{ pagination.sortable('Apellidos', 's.lastname')|raw }}
                 </div>
                 <div class="option_width" style="float: left; width: 90px; margin-left: -6px;">
-                    {{ pagination.sortable('Edad', 's.age')|raw }}
+                    {{ pagination.sortable('Seccion', 's.groupyear')|raw }}
                 </div>
                 <div class="option_width" style="float: left; width: 100px; margin-left: -6px;">
                     {{ pagination.sortable('Genero', 's.gender')|raw }}
@@ -54,7 +54,7 @@
                 <div class="option_width" style="float: left; width: 100px; margin-left: -6px;">{{ entity.carne }}</div>
                 <div class="option_width" style="float: left; width: 200px; margin-left: -6px;">{{ entity.firstname }}</div>
                 <div class="option_width" style="float: left; width: 200px; margin-left: -6px;">{{ entity.lastname }}</div>
-                <div class="option_width" style="float: left; width: 90px; margin-left: -6px;">{{ entity.age }}</div>
+                <div class="option_width" style="float: left; width: 90px; margin-left: -6px;">{{ entity.groupyear }}</div>
                 <div class="option_width" style="float: left; width: 100px; margin-left: -6px;">{% if entity.gender == 1%}{% trans %}label.male{% endtrans %}{% else %}{% trans %}label.female{% endtrans %}{% endif %}</div>
                 <div class="right imageButton editButton"  title="{% trans %}label.edit{% endtrans %}"  rel="{{ entity.id }}"></div>
                 <div class="right imageButton viewButton"  title="{% trans %}label.view{% endtrans %}"  rel="{{ entity.id }}"></div>
