--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Penalty/index.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Penalty/index.html.twig
@@ -27,6 +27,8 @@
     Tecnotek.UI.urls["edit"] = "#";
 
     Tecnotek.UI.vars["currentPeriod"] = {{ currentPeriod }};
+    Tecnotek.UI.urls["deleteURL"] = "{{ path("_delete_penalties_simple") }}";
+    Tecnotek.UI.translates["confirmDelete"] = "{% trans %}messages.confirmation.penalty.delete{% endtrans %}";
 
 </script>
 <!-- basic fancybox setup -->
@@ -123,7 +125,7 @@ $(function() {
                 <div class="option_width" style="float: left; width: 150px;" title="{{ entity.comments }}">{{ entity.penalty }}</div>
 
                 <div class="right imageButton editButton"  title="{% trans %}label.edit{% endtrans %}"  rel="{{ entity.id }}"></div>
-                <div class="right imageButton deleteButton" style="height: 16px;"  title="{% trans %}label.view{% endtrans %}"  rel="{{ entity.id }}"></div>
+                <div class="right imageButton deleteButton" style="height: 16px;"  title="{% trans %}label.delete{% endtrans %}"  rel="{{ entity.id }}"></div>
 
                 <div class="clear"></div>
             </div>
@@ -179,6 +181,11 @@ $(function() {
         <div style="margin-bottom: 5px;">
             <label style="display: inline-block; width: 150px">{% trans %}label.comments{% endtrans %}</label>
             <textarea rows="3" cols="15" id="comments" name="comments" style="width: 250px"></textarea>
+        </div>
+
+        <div style="margin-bottom: 5px;">
+            <label style="display: inline-block; width: 150px">{% trans %}label.points{% endtrans %}</label>
+            <input type="integer" id="pointsPenalty" name="pointsPenalty" style="width: 50px">
         </div>
 
         <div class="left"><input class="button success-darker tiny cancelButton" style="margin-top: 0px;" type="button" value="{% trans %}label.cancelar{% endtrans %}"/></div>
