--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -94,6 +94,8 @@
                             <li><a href="{{ path('_expediente_report_students') }}">{% trans %}label.students{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_clubs') }}">{% trans %}label.clubs{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_period_notes_by_group') }}">{% trans %}menu.qualifications.report{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_report_group_qualifications_by_rubro') }}">{% trans %}menu.qualifications.of.group.by.rubro{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_report_student_qualifications') }}">{% trans %}menu.detail.student.qualifications{% endtrans %}</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
