--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/absences_by_route.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/absences_by_route.html.twig
@@ -37,7 +37,7 @@
                 <p style="text-align: center; padding-bottom: 0px;">Ordenados por Nombre</p>
             </div>
 
-            {% for route in entities %}
+            {% for route in entities if route.routeType == 1 %}
             <div class="fields_row route">
                 <p style="text-decoration: underline; padding-bottom: 0px;">Ruta {{ loop.index }}: {{ route.code ~ " - " ~ route.description }}</p>
                 {% if route.bus != "" %}
