--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Absence/edit.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Absence/edit.html.twig
@@ -63,6 +63,18 @@
                             </div>
                         </div>
 
+                        <div class="formRow">
+
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.type{% endtrans %}</label>
+                                <select id="selectMode" name="selectMode">
+                                    <option value="1">Justificar ausencia</option>
+                                    <option value="2">Justificar ausencias del dia del mismo tipo</option>
+                                    <option value="3">Justificar ausencias del dia</option>
+                                </select>
+                            </div>
+                        </div>
+
 
                         <div class="formRow ">
                             <div class="large-12 columns buttonsPanel">
