--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/observations.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/observations.html.twig
@@ -94,7 +94,7 @@
                         </select>
                     </div>
                 </div>
-
+                <input type="hidden" id="teacherid" name="teacherid"  value="{{ app.user.id }}">
                 <div class="left" style="margin-left: 15px;"><a href="#" class="button success-darker tiny" id="viewPrintable" name="viewPrintable"><span></span>Versi&oacute;n Imprimible</a></div>
 
                 <div class="clear"></div>
