--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -80,6 +80,7 @@
                             <li><a href="{{ path('_expediente_sysadmin_absence_enter_by_group')}}">{% trans %}label.absences.by.group{% endtrans %}</a></li>
 
                             <li><a style="text-align: left;" href="{{ path('_expediente_penalties') }}">{% trans %}label.penalties{% endtrans %}</a></li>
+                            <li><a style="text-align: left;" href="{{ path('_expediente_tickets') }}">{% trans %}label.tickets{% endtrans %}</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
