--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/groupQualificationsByRubro.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/groupQualificationsByRubro.html.twig
@@ -91,7 +91,7 @@
         </div>
 
         <div style="width: 100%; text-align: center;">
-            <div id="fountainG" >
+            <div id="fountainG" style="display: none;" >
                 <div id="fountainG_1" class="fountainG">
                 </div>
                 <div id="fountainG_2" class="fountainG">
