Actualizacion de reporte de notas de periodo

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodGroupQualifications.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodGroupQualifications.html.twig
@@ -82,7 +82,7 @@
         <div class="clear"></div>
 
         <div id="tableContainer" name="tableContainer" style="display: none;">
-            <div class="left qualificationTable" id="tablaCalificacion" name="tablaCalificacion">
+            <div class="qualificationTable" id="tablaCalificacion" name="tablaCalificacion">
                 <div  name="contentBody" id="contentBody"></div>
                 <div class="clear"></div>
             </div>
@@ -90,7 +90,7 @@
         </div>
 
         <div style="width: 100%; text-align: center;">
-            <div id="fountainG" >
+            <div id="fountainG" style="display: none;" >
                 <div id="fountainG_1" class="fountainG">
                 </div>
                 <div id="fountainG_2" class="fountainG">
