--- a/web/saintmichael/stylesheets/qualificationsOfPeriod.css
+++ b/web/saintmichael/stylesheets/qualificationsOfPeriod.css
@@ -25,7 +25,7 @@
 .qualificationTable .textField {font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 44px; height: 24px; line-height: 11px;
     vertical-align: middle; border: none; font-size: 12px; padding: 0px; margin: 0px; background-color: #A4D2FD;}
 .qualificationTable {width: 950px}
-#contentBody {width: auto; overflow-x:scroll; margin-left:0px; }
+/*#contentBody {width: auto; overflow-x:scroll; margin-left:0px; }*/
 .headcolcarne { height: 30px; border: 1px solid black; position:absolute; left:0; line-height: 30px; }
 .headcolnombre { height: 30px; border: 1px solid black; position:absolute; left:75px; line-height: 30px; }
 
