--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
@@ -51,6 +51,30 @@
             </br></br></br></br></br></br></br></br></br></br>
             <div class="center" style="float: left; width: 900px; font-size: 14px;">{{ text }}</div>
             </br></br>
+            {% if ticket.student.groupyear < '7' %}
+                <div class="center"><h3><img width="820" height="140" src="{{ asset('images/' ~ header) }}" alt="" class="image-hover"></h3></div>
+
+                <div class="center"><h3>{% trans %}label.ticket4{% endtrans %}</h3></div>
+
+                <div class="center" style="float: left; width: 900px; font-size: 16px;">{% trans %}label.ticket3 {% endtrans %} {{ ticket.date|date("d-m-Y H:i:s") }}</div>
+                </br></br>
+
+                <div class="center" style="float: left; width: 900px; font-size: 16px;">{% trans %}label.ticket1 {% endtrans %} {{ ticket.student }}</div>
+                </br></br>
+
+                <div class="center" style="float: left; width: 900px; font-size: 16px;">{% trans %}label.ticket2 {% endtrans %} {{ ticket.relative.contact }}</div>
+                </br></br>
+
+                </br></br></br></br>
+                <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
+                <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
+                </br></br>
+                <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5 {% endtrans %}</div>
+                <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket6 {% endtrans %}</div>
+                </br></br></br></br></br></br></br></br></br></br>
+                <div class="center" style="float: left; width: 900px; font-size: 14px;">{{ text }}</div>
+                </br></br>
+            {% endif %}
         </div>        
         <div class="clear"></div>
     </div>
