--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -98,6 +98,7 @@
                             <li><a href="{{ path('_expediente_report_group_qualifications_by_rubro') }}">{% trans %}menu.qualifications.of.group.by.rubro{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_student_qualifications') }}">{% trans %}menu.detail.student.qualifications{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_routes_club') }}">{% trans %}label.routes.club{% endtrans %}</a></li>
+                            <!-- <li><a href="{{ path('_expediente_report_penalty_students') }}">{% trans %}label.penalty.report{% endtrans %}</a></li> -->
                         </ul>
                     </li>
                     <li class="divider"></li>
