--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
@@ -26,6 +26,7 @@ Tecnotek :: Expediente :: Super Administrador
 <link rel="stylesheet" href="{{ asset('fancybox/jquery.fancybox.css') }}" type="text/css" media="all" />
 <link rel="stylesheet" href="{{ asset('fancybox/fancybox_style.css') }}" type="text/css" media="all" />
 <link rel="stylesheet" href="{{ asset('css/jquery-ui-timepicker-addon.css') }}" type="text/css" media="all" />
+<link rel="stylesheet" href="{{ asset('saintmichael//stylesheets/waitingBar.css') }}" type="text/css" media="all" />
 <style>
     @media screen {
         .noPrint {/*display:block !important;*/}
@@ -117,6 +118,27 @@ Tecnotek :: Expediente :: Super Administrador
                 <div class="clear"></div>
             </div>
             <div class="clear"></div>
+        </div>
+
+        <div style="width: 100%; text-align: center;">
+            <div id="fountainG" style="display: none;" >
+                <div id="fountainG_1" class="fountainG">
+                </div>
+                <div id="fountainG_2" class="fountainG">
+                </div>
+                <div id="fountainG_3" class="fountainG">
+                </div>
+                <div id="fountainG_4" class="fountainG">
+                </div>
+                <div id="fountainG_5" class="fountainG">
+                </div>
+                <div id="fountainG_6" class="fountainG">
+                </div>
+                <div id="fountainG_7" class="fountainG">
+                </div>
+                <div id="fountainG_8" class="fountainG">
+                </div>
+            </div>
         </div>
     </div>
 </div>
