--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
@@ -51,7 +51,12 @@
             </br></br></br></br></br></br></br></br></br></br>
             <div class="center" style="float: left; width: 900px; font-size: 14px;">{{ text }}</div>
             </br></br>
-            {% if ticket.student.groupyear < '7' %}
+            {% if ticket.student.groupyear == '1-A' or ticket.student.groupyear == '1-B' or ticket.student.groupyear == '1-C' or
+            ticket.student.groupyear == '2-A' or ticket.student.groupyear == '2-B' or ticket.student.groupyear == '2-C' or
+            ticket.student.groupyear == '3-A' or ticket.student.groupyear == '3-B' or ticket.student.groupyear == '3-C' or
+            ticket.student.groupyear == '4-A' or ticket.student.groupyear == '4-B' or ticket.student.groupyear == '4-C' or
+            ticket.student.groupyear == '5-A' or ticket.student.groupyear == '5-B' or ticket.student.groupyear == '5-C' or
+            ticket.student.groupyear == '6-A' or ticket.student.groupyear == '6-B' or ticket.student.groupyear == '6-C' %}
                 <div class="center"><h3><img width="820" height="140" src="{{ asset('images/' ~ header) }}" alt="" class="image-hover"></h3></div>
 
                 <div class="center"><h3>{% trans %}label.ticket4{% endtrans %}</h3></div>
