--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Qualification/courseGroupQualification.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Qualification/courseGroupQualification.html.twig
@@ -21,7 +21,7 @@
         .tableQualifications .azul {background-color: #2b34ee; color: #000; font-size: 12px; }
         .tableQualifications .celesteClaro {background-color: #A4D2FD; color: #000; font-size: 12px;}
         .tableQualifications .celesteOscuro {background-color: #5F96E7; color: #000; font-size: 12px;}
-        .tableQualifications .morado {background-color: #B698EE; color: #000; padding: 1.5625em 0.625em; vertical-align: bottom; font-size: 12px; }
+        .tableQualifications .morado {background-color: #B698EE; color: #000; /*padding: 1.5625em 0.625em; vertical-align: bottom;*/ font-size: 12px; }
         .tableQualifications .bold {font-weight: bold;}
 
         .verticalText{font-weight: bold; text-align: center; vertical-align: middle; width: 20px; margin: 0px; padding: 0px; padding-left: 3px; padding-right: 3px; padding-top: 10px; white-space: nowrap; font-size: 11px; -webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg);}
